<?xml version="1.0" encoding="utf-8"?>
<!--constraint layout-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B9BCB9"
    tools:context=".SignupActivity">

    <!--card view widget for the form-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:layout_marginBottom="214dp"
        android:background="#77EA7C"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <!--linear layout for form components-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!--linear layout with heading and inputs text views-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <!--form heading-->
                <TextView
                    android:id="@+id/signup_activity_tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:background="#DFE3E3"
                    android:padding="10dp"
                    android:text="REGISTER"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!--editText view for username-->
                <EditText
                    android:id="@+id/login_activity_et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="#FFFFFF"
                    android:backgroundTint="#CCCBCB"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hapticFeedbackEnabled="false"
                    android:hint="@string/username_signup_hint"
                    android:inputType="textPersonName"
                    android:padding="10dp" />

                <!--editText view for password-->
                <EditText
                    android:id="@+id/login_activity_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="#FFFFFF"
                    android:backgroundTint="#CCCBCB"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/password_signup_hint"
                    android:inputType="textPersonName|textPassword"
                    android:padding="10dp" />

                <!--editText view for password confirmation-->
                <EditText
                    android:id="@+id/signup_activity_et_confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="0dp"
                    android:background="#FFFFFF"
                    android:backgroundTint="#CCCBCB"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/cp_signup_hint"
                    android:inputType="textPassword"
                    android:padding="10dp" />

            </LinearLayout>

            <!--register button-->
            <Button
                android:id="@+id/login_activity_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="#000000"
                app:backgroundTint="#F1E047" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!--linear layout for the sign in section-->
    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="105dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.25">

        <!--sign in heading-->
        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Login if already registered"
            android:textColor="#000000"
            android:textSize="16sp" />

        <!--sign in button-->
        <Button
            android:id="@+id/signup_activity_btn_login"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="#000000"
            app:backgroundTint="#F1E047" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>