<?xml version="1.0" encoding="utf-8"?>
<!--constraint layout-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B9BCB9"
    tools:context=".LoginActivity">

    <!--card view for the login form-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367">

        <!--linear layout for form content-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!--linear layout for form header and inputs-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="206dp"
                android:orientation="vertical">

                <!--form heading-->
                <TextView
                    android:id="@+id/signup_activity_tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="#DFE3E3"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Account Login "
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!--editText view for username-->
                <EditText
                    android:id="@+id/login_activity_et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    android:background="#FFFFFF"
                    android:backgroundTint="#CCCBCB"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/username_login_hint"
                    android:inputType="textPersonName"
                    android:padding="10dp" />

                <!--editText view for password-->
                <EditText
                    android:id="@+id/login_activity_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:background="#FDFCFC"
                    android:backgroundTint="#CCCBCB"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/password_login_hint"
                    android:inputType="textPersonName|textPassword"
                    android:padding="10dp" />

            </LinearLayout>

            <!--sign in button-->
            <Button
                android:id="@+id/login_activity_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#000000"
                app:backgroundTint="#F1E047" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!--linear layout for the register section-->
    <LinearLayout
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.294">

        <!--register section header-->
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Register to the service here!"
            android:textColor="#000000"
            android:textSize="16sp" />

        <!--register button-->
        <Button
            android:id="@+id/login_activity_btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:textColor="#000000"
            app:backgroundTint="#F1E047" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>